Level 2-2 2-1 Test 파일 삭제